<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:layout_marginTop="56dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/default_profile_image"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/display_name"
        android:textStyle="bold"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_displayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/current_user_status"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_send_req_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/total_friends"
        android:textSize="16sp" />
    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_decline_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/send_friend_request"
        android:background="@drawable/button_custom_blue"
        android:padding="5dp"/>
      <!--  android:backgroundTint="@color/colorAccent"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white" />-->

    <Button
        android:id="@+id/profile_decline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/decline_friend_request"
        android:background="@drawable/button_custom_blue"
        android:padding="5dp"/>

</RelativeLayout>