<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@color/wcColor">

        <LinearLayout
            android:id="@+id/mainLinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                android:text="@string/app_name"
                android:textColor="@color/lightorange"
                android:textSize="60sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/welcomeText"
                android:textAlignment="center"
                android:textColor="@color/lightorangedark"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mainLinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/wc"
            android:paddingBottom="60dp">
            <!-- android:layout_marginTop="135dp" -->


            <Button
                android:id="@+id/login_button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle"
                android:text="@string/login" />
            <Button
                android:id="@+id/signup_button"
                android:layout_marginTop="20dp"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle"
                android:text="@string/signup"
               />
        </LinearLayout>

    </LinearLayout>
</ScrollView>